<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about">


    <TextView
        android:id="@+id/aboutUsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_title"
        android:textColor="#49688C"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/aboutUsText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text"
        android:textAlignment="center"
        android:textColor="#49688C"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/aboutTheAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_the_app_title"
        android:textAlignment="center"
        android:textColor="#49688C"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsText"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/aboutTheAppText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/about_the_app_text"
        android:textAlignment="center"
        android:textColor="#49688C"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTheAppTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/instructionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_title"
        android:textAlignment="center"
        android:textColor="#49688C"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTheAppText"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions_text"
        android:textAlignment="center"
        android:textColor="#49688C"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTitle"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/place_here"
        app:layout_constraintBottom_toTopOf="@id/contButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionsText"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/contButton2"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_square"
        android:backgroundTint="@color/black"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:text="Continue"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

</androidx.constraintlayout.widget.ConstraintLayout>